<resources>
    <string name="app_name">HoverHackathon</string>
    <string name="title">Utility Bills</string>
    <string name="banks_sacco"><![CDATA[Banks & Sacco]]></string>
    <string name="county">County Services</string>
    <string name="gvt">Government Services</string>
    <string name="promotional">Manage Promotional Content</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kplc">KPLC Prepaid</string>
    <string name="dstv">DSTV</string>
    <string name="zuku">Zuku</string>
    <string name="go_tv">GoTV</string>
    <string name="start_times">Star Times</string>
    <string name="rent">Rent</string>

    <string name="paybill_prompt">Recently paid bill(s)</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="pay">Pay</string>
    <string name="im"><![CDATA[I&M Bank]]></string>
    <string name="kcb">KCB Bank</string>
    <string name="equity">Equity Bank</string>
    <string name="stan">Standard Chartered Bank</string>
    <string name="ectitizen">eCitizen</string>
    <string name="nhif">NHIF</string>
    <string name="nssf">NSSF</string>
    <string name="helb">Helb</string>
    <string name="ticketing">Transport Ticketing</string>
    <string name="sgr">Madaraka Express</string>
    <string name="buupass">BuuPass</string>
    <string name="bonga">Pay with Bonga</string>
    <string name="sheria">Sheria Sacco</string>
    <string name="stima">Stima Sacco</string>
    <string name="spinner_title">Select Service</string>
</resources>
