<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"

        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/im"
                android:elevation="@dimen/_10sdp"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        app:srcCompat="@drawable/im"
                        android:scaleType="centerCrop"
                        />

                    <TextView
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/im"
                        android:textSize="18sp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/kcb"
                android:layout_weight="0.5"
                android:elevation="@dimen/_10sdp"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        app:srcCompat="@drawable/kcb"
                        android:scaleType="centerCrop"
                        />

                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kcb"
                        android:textSize="18sp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"

            xmlns:android="http://schemas.android.com/apk/res/android">

            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/equity"
                android:elevation="@dimen/_10sdp"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        app:srcCompat="@drawable/equity"
                        android:scaleType="centerCrop"
                        />

                    <TextView
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/equity"
                        android:textSize="18sp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/stan"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_weight="0.5"
                android:elevation="@dimen/_10sdp"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        app:srcCompat="@drawable/stan"
                        android:scaleType="centerCrop"
                        />

                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/stan"
                        android:textSize="18sp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"

            xmlns:android="http://schemas.android.com/apk/res/android">

            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/sheria"
                android:elevation="@dimen/_10sdp"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        app:srcCompat="@drawable/sheria"
                        android:scaleType="centerCrop"
                        />

                    <TextView
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sheria"
                        android:textSize="18sp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/stima"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_weight="0.5"
                android:elevation="@dimen/_10sdp"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        app:srcCompat="@drawable/stima"
                        android:scaleType="centerCrop"
                        />

                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/stima"
                        android:textSize="18sp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>